opam-version: "2.0"
name:         "carton"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/ocaml-git"
bug-reports:  "https://github.com/mirage/ocaml-git/issues"
dev-repo:     "git+https://github.com/mirage/ocaml-git.git"
doc:          "https://mirage.github.io/ocaml-git/"
license:      "MIT"
synopsis:     "Implementation of PACKv2 file in OCaml"
description: """Carton is an implementation of the PACKv2 file
in OCaml. PACKv2 file is used by Git to store Git objects.
Carton is more abstracted when it can store any objects.
"""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"        {>= "4.07.0"}
  "dune"         {>= "2.6.0"}
  "ke"           {>= "0.4"}
  "duff"         {>= "0.3"}
  "decompress"   {>= "1.2.0"}
  "cstruct"      {>= "5.0.0"}
  "optint"       {>= "0.0.4"}
  "bigstringaf"
  "bigarray-compat"
  "checkseum"    {>= "0.2.1"}
  "logs"
  "bigstringaf"
  "psq"          {>= "0.2.0"}
  "fmt"
  "result"       {with-test}
  "rresult"      {with-test}
  "fpath"        {with-test}
  "base64"       {with-test & >= "3.0.0"}
  "bos"          {with-test}
  "digestif"     {with-test & >= "0.8.1"}
  "mmap"         {with-test}
  "base-unix"    {with-test}
  "base-threads" {with-test}
  "alcotest"     {with-test}
  "crowbar"      {with-test & >= "0.2"}
]
