opam-version: "2.0"
name: "carton"
synopsis: "Implementation of PACKv2 file in OCaml"
description: """\
Carton is an implementation of the PACKv2 file
in OCaml. PACKv2 file is used by Git to store Git objects.
Carton is more abstracted when it can store any objects."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/mirage/ocaml-git"
doc: "https://mirage.github.io/ocaml-git/"
bug-reports: "https://github.com/mirage/ocaml-git/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "ke" {>= "0.4"}
  "duff" {>= "0.3"}
  "decompress" {>= "1.3.0"}
  "cstruct" {>= "5.0.0"}
  "optint" {>= "0.0.4"}
  "bigstringaf" {>= "0.7.0"}
  "checkseum" {>= "0.2.1"}
  "logs"
  "bigarray-compat"
  "cmdliner" {>= "1.0.4"}
  "hxd" {>= "0.3.0"}
  "psq" {>= "0.2.0"}
  "fmt" {>= "0.8.9"}
  "result"
  "rresult"
  "fpath"
  "base64" {with-test & >= "3.0.0"}
  "bos"
  "digestif" {>= "0.8.1"}
  "mmap"
  "base-unix" {with-test}
  "base-threads" {with-test}
  "alcotest" {with-test}
  "crowbar" {with-test & >= "0.2"}
  "alcotest-lwt" {>= "1.2.3" & with-test}
  "lwt" {>= "5.3.0" & with-test}
  "ocamlfind" {>= "1.8.1" & with-test}
  "mirage-flow" {>= "2.0.1" & with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-git.git"
