opam-version: "2.0"
maintainer:   [ "thomas@gazagnaire.org"
                "romain.calascibetta@gmail.com" ]
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-git"
bug-reports:  "https://github.com/mirage/ocaml-git/issues"
dev-repo:     "git+https://github.com/mirage/ocaml-git.git"
doc:          "https://mirage.github.io/ocaml-git/"
synopsis:     "A package to use HTTP-based ocaml-git with Unix backend"

build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j1" "--no-buffer"] {with-test}
]

depends: [
  "ocaml"             {>= "4.07.0"}
  "dune"              {>= "2.6.0"}
  "git"
  "git-cohttp"
  "cohttp-lwt-unix"
]

pin-depends: [
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#c2c3f064b6873e11b9abc62302415b24ca9d5ce7" ]
  [ "cohttp-lwt.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#c2c3f064b6873e11b9abc62302415b24ca9d5ce7" ]
  [ "cohttp-lwt-unix.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#c2c3f064b6873e11b9abc62302415b24ca9d5ce7" ]
]
