opam-version: "2.0"
synopsis: "A package to use ocaml-git with MirageOS backend"
maintainer: ["thomas@gazagnaire.org" "romain.calascibetta@gmail.com"]
authors: "Thomas Gazagnaire"
license: "ISC"
homepage: "https://github.com/mirage/ocaml-git"
doc: "https://mirage.github.io/ocaml-git/"
bug-reports: "https://github.com/mirage/ocaml-git/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "mimic"
  "git" {= version}
  "git-paf" {= version}
  "awa" {>= "0.0.5"}
  "awa-mirage" {>= "0.0.5"}
  "dns" {>= "6.0.0"}
  "dns-client" {>= "6.0.0"}
  "tls"
  "tls-mirage"
  "uri"
  "hex"
  "happy-eyeballs-mirage" {>= "0.1.1"}
  "happy-eyeballs" {>= "0.1.1"}
  "ca-certs-nss"
  "mirage-crypto"
  "ptime"
  "x509"
  "cstruct"
  "tcpip" {>= "7.0.0"}
  "domain-name" {>= "0.3.0"}
  "fmt" {>= "0.8.9"}
  "ipaddr" {>= "5.0.1"}
  "lwt" {>= "5.3.0"}
  "mirage-clock" {>= "3.1.0"}
  "mirage-flow" {>= "2.0.1"}
  "mirage-random" {>= "2.0.0"}
  "mirage-time" {>= "2.0.1"}
  "result" {>= "1.5"}
  "rresult" {>= "0.6.0"}
  "alcotest" {>= "1.2.3" & with-test}
  "alcotest-lwt" {>= "1.2.3" & with-test}
  "bigstringaf" {>= "0.7.0" & with-test}
  "cstruct" {>= "6.0.0" & with-test}
  "logs" {>= "0.7.0" & with-test}
  "ke" {>= "0.4" & with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs "--no-buffer"] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-git.git"
pin-depends: [
  [ "dns.dev" "git+https://github.com/dinosaure/ocaml-dns.git#9f889b37a7d3d4023563b054ab1d5d61591febc6" ]
  [ "dns-client.dev" "git+https://github.com/dinosaure/ocaml-dns.git#9f889b37a7d3d4023563b054ab1d5d61591febc6" ]
  [ "happy-eyeballs.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#92b0f7c85cc18aa7584cc291831fbf864fe81684" ]
  [ "happy-eyeballs-lwt.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#92b0f7c85cc18aa7584cc291831fbf864fe81684" ]
  [ "happy-eyeballs-mirage.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#92b0f7c85cc18aa7584cc291831fbf864fe81684" ]
]
