opam-version: "2.0"
name: "git-nss"
synopsis: "Not So Smart - Implementation of Smart protocol"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/mirage/decompress"
doc: "https://mirage.github.io/decompress/"
bug-reports: "https://github.com/mirage/decompress/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "2.6.0"}
  "emile" {>= "0.9"}
  "stdlib-shims"
  "rresult"
  "result"
  "fmt" {>= "0.8.7"}
  "cstruct" {>= "5.0.0"}
  "domain-name"
  "astring"
  "logs"
  "psq" {>= "0.2.0"}
  "carton"
  "carton-lwt"
  "uri"
  "digestif" {>= "0.8.1"}
  "decompress" {>= "1.2.0"}
  "bigstringaf"
  "ocurl" {with-test}
  "mirage-crypto-rng" {with-test & >= "0.8.0"}
  "bos" {with-test}
  "fpath" {with-test}
  "base-unix" {with-test}
  "mmap" {with-test}
  "alcotest-lwt" {with-test}
  "crowbar" {with-test & >= "0.2"}
  "bigarray-compat" {>= "1.0.0"}
  "conduit" {>= "2.1.0"}
  "ipaddr" {>= "5.0.1"}
  "ke" {>= "0.4"}
  "lwt" {>= "5.3.0"}
  "mirage-flow" {>= "2.0.1"}
  "alcotest" {>= "1.2.3" & with-test}
  "cohttp-lwt-unix" {>= "2.5.4" & with-test}
  "conduit-lwt" {>= "2.1.0" & with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/decompress.git"
