opam-version: "2.0"
synopsis: "A package to use HTTP-based ocaml-git with MirageOS backend"
maintainer: ["thomas@gazagnaire.org" "romain.calascibetta@gmail.com"]
authors: "Thomas Gazagnaire"
license: "ISC"
homepage: "https://github.com/mirage/ocaml-git"
doc: "https://mirage.github.io/ocaml-git/"
bug-reports: "https://github.com/mirage/ocaml-git/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "git" {= version}
  "mimic" {>= "0.0.4"}
  "paf" {>= "0.0.7"}
  "ca-certs-nss"
  "fmt"
  "ipaddr"
  "logs"
  "lwt"
  "mirage-clock"
  "tcpip" {>= "7.0.0"}
  "mirage-time"
  "result"
  "rresult"
  "tls" {>= "0.14.0"}
  "uri"
  "bigarray-compat"
  "bigstringaf"
  "domain-name"
  "httpaf"
  "mirage-flow"
  "tls-mirage"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs "--no-buffer"] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-git.git"
