opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-git"
bug-reports:  "https://github.com/mirage/ocaml-git/issues"
dev-repo:     "https://github.com/mirage/ocaml-git.git"
doc:          "https://mirage.github.io/ocaml-git/"

build-test: [
  ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" "-n" name "--tests" "true"]
  ["ocaml" "pkg/pkg.ml" "test"]
]

depends: [
  "alcotest"
  "git-http"
  "git-unix"
  "git-mirage"
  "mirage-fs-unix" {>="1.1.4"}
]

available: [ocaml-version >= "4.02.3"]
