opam-version: "2.0"
synopsis: "Virtual package to install and configure ocaml-git's Unix backend"
maintainer: ["thomas@gazagnaire.org" "romain.calascibetta@gmail.com"]
authors: "Thomas Gazagnaire"
license: "ISC"
homepage: "https://github.com/mirage/ocaml-git"
doc: "https://mirage.github.io/ocaml-git/"
bug-reports: "https://github.com/mirage/ocaml-git/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "2.6.0"}
  "mmap" {>= "1.1.0"}
  "stdlib-shims"
  "git"
  "rresult"
  "result"
  "bigarray-compat"
  "bigstringaf"
  "fmt" {>= "0.8.7"}
  "git-nss"
  "bos"
  "fpath"
  "uri"
  "digestif" {>= "0.8.1"}
  "logs"
  "lwt"
  "base-unix"
  "alcotest" {with-test & >= "1.1.0"}
  "alcotest-lwt" {with-test & >= "1.1.0"}
  "base64" {with-test & >= "3.0.0"}
  "git-cohttp-unix"
  "mirage-clock"
  "mirage-clock-unix"
  "astring" {>= "0.8.5"}
  "awa"
  "cmdliner" {>= "1.0.4"}
  "cohttp-lwt-unix" {>= "2.5.4"}
  "decompress" {>= "1.2.0"}
  "domain-name" {>= "0.3.0"}
  "ipaddr" {>= "5.0.1"}
  "mtime" {>= "1.2.0"}
  "ocamlfind" {>= "1.8.1"}
  "tcpip" {>= "6.0.0"}
  "cstruct" {>= "6.0.0" & with-test}
  "awa-mirage"
  "mirage-flow" {>= "2.0.1"}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j1" "--no-buffer"] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-git.git"
