opam-version: "2.0"
synopsis: "Virtual package to install and configure ocaml-git's Unix backend"
maintainer: ["thomas@gazagnaire.org" "romain.calascibetta@gmail.com"]
authors: "Thomas Gazagnaire"
license: "ISC"
homepage: "https://github.com/mirage/ocaml-git"
doc: "https://mirage.github.io/ocaml-git/"
bug-reports: "https://github.com/mirage/ocaml-git/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "mmap" {>= "1.1.0"}
  "git" {= version}
  "git-mirage" {= version}
  "happy-eyeballs-lwt" {>= "0.1.1"}
  "rresult"
  "result"
  "bigstringaf"
  "bigarray-compat"
  "fmt" {>= "0.8.7"}
  "bos"
  "fpath"
  "uri" {with-test}
  "digestif" {>= "0.8.1"}
  "logs"
  "lwt"
  "base-unix"
  "alcotest" {with-test & >= "1.1.0"}
  "alcotest-lwt" {with-test & >= "1.1.0"}
  "base64" {with-test & >= "3.0.0"}
  "mirage-clock"
  "mirage-clock-unix"
  "astring" {>= "0.8.5"}
  "awa" {>= "0.0.5"}
  "mirage-time"
  "mirage-unix" {>= "4.0.0"}
  "cmdliner" {>= "1.0.4"}
  "decompress" {>= "1.4.0"}
  "domain-name" {>= "0.3.0"}
  "ipaddr" {>= "5.0.1"}
  "mtime" {>= "1.2.0"}
  "ocamlfind" {>= "1.8.1"}
  "tcpip" {>= "7.0.0"}
  "cstruct" {>= "6.0.0"}
  "awa-mirage" {>= "0.0.5"}
  "mirage-flow" {>= "2.0.1"}
  "ke" {>= "0.4" & with-test}
  "mirage-crypto-rng" {>= "0.8.8" & with-test}
  "ptime"
  "mimic"
  "ca-certs-nss" {>= "3.60"}
  "tls" {>= "0.14.0"}
  "tls-mirage" {>= "0.14.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs "--no-buffer"] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-git.git"
pin-depends: [
  [ "happy-eyeballs.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#92b0f7c85cc18aa7584cc291831fbf864fe81684" ]
  [ "happy-eyeballs-lwt.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#92b0f7c85cc18aa7584cc291831fbf864fe81684" ]
  [ "happy-eyeballs-mirage.dev" "git+https://github.com/dinosaure/happy-eyeballs.git#92b0f7c85cc18aa7584cc291831fbf864fe81684" ]
]
