opam-version: "2.0"
synopsis: "Virtual package to install and configure ocaml-git's Unix backend"
maintainer: ["thomas@gazagnaire.org" "romain.calascibetta@gmail.com"]
authors: "Thomas Gazagnaire"
license: "ISC"
homepage: "https://github.com/mirage/ocaml-git"
doc: "https://mirage.github.io/ocaml-git/"
bug-reports: "https://github.com/mirage/ocaml-git/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8.0"}
  "git" {= version}
  "git-mirage" {= version}
  "happy-eyeballs-lwt" {>= "0.1.2"}
  "rresult" {>= "0.7.0"}
  "bigstringaf" {>= "0.9.0"}
  "fmt" {>= "0.8.7"}
  "bos"
  "fpath"
  "uri" {with-test}
  "digestif" {>= "1.1.2"}
  "logs"
  "lwt" {>= "5.6.0"}
  "base-unix"
  "carton" {>= "0.7.2"}
  "alcotest" {with-test & >= "1.1.0"}
  "alcotest-lwt" {with-test & >= "1.1.0"}
  "base64" {with-test & >= "3.0.0"}
  "astring" {>= "0.8.5"}
  "cmdliner" {>= "1.1.0"}
  "decompress" {>= "1.4.0"}
  "domain-name" {>= "0.3.0"}
  "ipaddr" {>= "5.0.1"}
  "mtime" {>= "1.2.0"}
  "tcpip" {>= "7.0.0"}
  "cstruct" {>= "6.0.0"}
  "mirage-flow" {>= "4.0.0"}
  "ke" {>= "0.4" & with-test}
  "mirage-crypto-rng" {>= "1.2.0" & with-test}
  "mimic" {>= "0.0.8"}
  "tls" {>= "1.0.0"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs "--no-buffer"] {with-test & os != "macos"}
]
dev-repo: "git+https://github.com/mirage/ocaml-git.git"
x-maintenance-intent: [ "(latest)" ]
