opam-version: "1.2"
maintainer:   [ "thomas@gazagnaire.org"
                "romain.calascibetta@gmail.com" ]
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-git"
bug-reports:  "https://github.com/mirage/ocaml-git/issues"
dev-repo:     "https://github.com/mirage/ocaml-git.git"
doc:          "https://mirage.github.io/ocaml-git/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune"       {build}
  "uri"        {>= "1.9.0"}
  "lwt"        {>= "2.4.7"}
  "angstrom"   {>= "0.9.0"}
  "fpath"      {>= "0.7.0"}
  "digestif"   {>= "0.7.0"}
  "lru"        {>= "0.2.0"}
  "decompress" {>= "0.8"}
  "encore"
  "duff"
  "hex"
  "ocplib-endian"
  "rresult"
  "logs"
  "fmt"
  "astring"
  "cstruct"
  "ocamlgraph"
  "alcotest" {test & >= "0.8.1"}
  "nocrypto" {test & >= "0.5.4"}
  "tls"      {test}
  "mtime"    {test & >= "1.0.0"}
]
available: [ocaml-version >= "4.03.0"]
