(executable
 (name bench_pack)
 (enabled_if
  (or
   (= %{architecture} "amd64")
   (= %{architecture} "x86_64")))
 (libraries
  bigstringaf
  bigarray-compat
  mtime
  fmt
  decompress.de
  decompress.zl
  digestif.c
  carton
  unix)
 (foreign_stubs
  (language c)
  (names rdtsc)))

(rule
 (alias runbench)
 (package carton)
 (enabled_if
  (or
   (= %{architecture} "amd64")
   (= %{architecture} "x86_64")))
 (deps
  (:bench bench_pack.exe)
  ../test/carton/bomb.idx
  ../test/carton/bomb.pack)
 (action
  (progn
   (run %{bench} 0)
   (run %{bench} 1))))
