(library
 (name carton_git)
 (public_name carton-git)
 (modules carton_git)
 (libraries logs decompress.zl lwt decompress.de bigstringaf fmt carton))

(library
 (name carton_git_unix)
 (public_name carton-git.unix)
 (modules carton_git_unix)
 (libraries
  astring
  bigstringaf
  fmt
  lwt
  fpath
  carton
  carton-lwt
  carton-git
  unix
  lwt.unix))
