(library
 (name carton)
 (modules carton dec enc h idx sigs zh)
 (public_name carton)
 (libraries
  ke
  duff
  optint
  checkseum
  decompress.de
  decompress.zl
  bigstringaf
  psq
  fmt))

(library
 (name thin)
 (modules thin)
 (public_name carton.thin)
 (libraries
  optint
  checkseum
  decompress.de
  decompress.zl
  bigstringaf
  logs
  carton
  cstruct
  ke))
